--- a/app/src/main/res/layout/ereignisskarte.xml
+++ b/app/src/main/res/layout/ereignisskarte.xml
@@ -41,6 +41,8 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
     <Button
+        android:backgroundTint="@color/grey"
+        android:textColor="@color/lightGrey"
         android:id="@+id/buttonWeiterEreigniskarte"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
