--- a/app/src/main/res/layout/online_verbindung.xml
+++ b/app/src/main/res/layout/online_verbindung.xml
@@ -40,7 +40,8 @@
         app:layout_constraintTop_toBottomOf="@+id/editTextIDInput">
 
         <Button
-        android:backgroundTint="@color/grey"
+            android:backgroundTint="@color/grey"
+            android:textColor="@color/lightGrey"
             android:id="@+id/buttonCreateGame"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -50,7 +51,8 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
-        android:backgroundTint="@color/grey"
+            android:backgroundTint="@color/grey"
+            android:textColor="@color/lightGrey"
             android:id="@+id/buttonConnectGame"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
