--- a/app/src/main/res/layout/stufe4_online.xml
+++ b/app/src/main/res/layout/stufe4_online.xml
@@ -41,6 +41,7 @@
 
     <Button
         android:backgroundTint="@color/grey"
+        android:textColor="@color/lightGrey"
         android:id="@+id/buttonStufe4Online"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
