--- a/app/src/main/res/layout/thema_ergebnis.xml
+++ b/app/src/main/res/layout/thema_ergebnis.xml
@@ -34,6 +34,7 @@
 
     <Button
         android:backgroundTint="@color/grey"
+        android:textColor="@color/lightGrey"
         android:id="@+id/buttonThema"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
