--- a/app/src/main/res/layout/veranstaltungswahl.xml
+++ b/app/src/main/res/layout/veranstaltungswahl.xml
@@ -95,16 +95,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewSpieler1online" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewPlayerName" />
 
     <Button
-        android:backgroundTint="@color/grey"
         android:id="@+id/continueVeranstaltung"
         android:layout_width="140dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"
+        android:backgroundTint="@color/grey"
         android:text="@string/continue_text"
+        android:textColor="@color/lightGrey"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -112,7 +111,7 @@
         app:layout_constraintTop_toBottomOf="@+id/checkOper" />
 
     <TextView
-        android:id="@+id/textViewSpieler1online"
+        android:id="@+id/textViewPlayerName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
