--- a/app/src/main/res/layout/quiz_online.xml
+++ b/app/src/main/res/layout/quiz_online.xml
@@ -84,6 +84,8 @@
         android:id="@+id/textViewFrageQuiz"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="64dp"
+        android:layout_marginEnd="64dp"
         android:layout_marginBottom="1dp"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/playerName"
