--- a/app/src/main/res/layout/player_config.xml
+++ b/app/src/main/res/layout/player_config.xml
@@ -32,18 +32,20 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:backgroundTint="@color/grey"
-        android:textColor="@color/white"
         android:id="@+id/gameStartButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
-        android:text="@string/continue_text"
+        android:backgroundTint="@color/grey"
         android:foreground="?selectableItemBackground"
+        android:text="@string/continue_text"
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toggleButton" />
+        app:layout_constraintTop_toBottomOf="@+id/toggleButton"
+        app:layout_constraintVertical_bias="0.1" />
 
     <ImageView
         android:id="@+id/imageView3"
@@ -61,8 +63,8 @@
         android:id="@+id/nächsterAvatarR"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView3"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageView3"
         app:layout_constraintTop_toTopOf="@+id/imageView3"
         app:srcCompat="@android:drawable/ic_media_play" />
@@ -71,11 +73,11 @@
         android:id="@+id/nächsterAvatarL"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="32dp"
         android:rotationX="0"
         android:rotationY="180"
         app:layout_constraintBottom_toBottomOf="@+id/imageView3"
         app:layout_constraintEnd_toStartOf="@+id/imageView3"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView3"
         app:srcCompat="@android:drawable/ic_media_play" />
 
@@ -83,27 +85,30 @@
         android:id="@+id/toggleButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:backgroundTint="@color/grey"
         android:textOff="@string/online"
         android:textOn="@string/offline"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textName2" />
+        app:layout_constraintTop_toBottomOf="@+id/textName2"
+        app:layout_constraintVertical_bias="0.109" />
 
     <EditText
         android:id="@+id/textName2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:ems="10"
         android:hint="@string/name2"
-        android:visibility="invisible"
         android:inputType="text"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/textName1"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/textName1"
-        app:layout_constraintTop_toBottomOf="@+id/textName1" />
+        app:layout_constraintTop_toBottomOf="@+id/textName1"
+        app:layout_constraintVertical_bias="0.091" />
 
     <ImageButton
         android:id="@+id/gespeicherteSpiele"
@@ -132,5 +137,26 @@
         app:layout_constraintEnd_toEndOf="@+id/SettingsButton"
         app:layout_constraintStart_toStartOf="@+id/SettingsButton"
         app:layout_constraintTop_toBottomOf="@+id/SettingsButton" />
+
+    <SeekBar
+        android:id="@+id/seekBar"
+        style="@style/Widget.AppCompat.SeekBar.Discrete"
+        android:layout_width="160dp"
+        android:layout_height="46dp"
+        android:max="4"
+        android:progress="1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/gameStartButton" />
+
+    <TextView
+        android:id="@+id/textViewQuestionCount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/seekBar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/gameStartButton" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
