--- a/app/src/main/res/layout/player_config.xml
+++ b/app/src/main/res/layout/player_config.xml
@@ -8,16 +8,6 @@
     android:background="@color/backgroundGray"
     android:visibility="visible">
 
-    <ImageButton
-        android:id="@+id/SettingsButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/ic_dialog_info" />
-
     <EditText
         android:id="@+id/textName1"
         android:layout_width="wrap_content"
@@ -29,7 +19,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:importantForAutofill="no" />
 
     <Button
         android:id="@+id/gameStartButton"
@@ -48,26 +39,25 @@
         app:layout_constraintVertical_bias="0.1" />
 
     <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
-        android:background="#FF0707"
+        android:id="@+id/avatarImage"
+        android:layout_width="147dp"
+        android:layout_height="135dp"
         app:layout_constraintBottom_toTopOf="@+id/textName1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars" />
+        android:importantForAccessibility="no" />
 
     <ImageButton
         android:id="@+id/nächsterAvatarR"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
+        app:layout_constraintBottom_toBottomOf="@+id/avatarImage"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView3"
-        app:layout_constraintTop_toTopOf="@+id/imageView3"
-        app:srcCompat="@android:drawable/ic_media_play" />
+        app:layout_constraintStart_toEndOf="@+id/avatarImage"
+        app:layout_constraintTop_toTopOf="@+id/avatarImage"
+        app:srcCompat="@android:drawable/ic_media_play"
+        android:importantForAccessibility="no" />
 
     <ImageButton
         android:id="@+id/nächsterAvatarL"
@@ -75,11 +65,12 @@
         android:layout_height="wrap_content"
         android:rotationX="0"
         android:rotationY="180"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
-        app:layout_constraintEnd_toStartOf="@+id/imageView3"
+        app:layout_constraintBottom_toBottomOf="@+id/avatarImage"
+        app:layout_constraintEnd_toStartOf="@+id/avatarImage"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView3"
-        app:srcCompat="@android:drawable/ic_media_play" />
+        app:layout_constraintTop_toTopOf="@+id/avatarImage"
+        app:srcCompat="@android:drawable/ic_media_play"
+        android:importantForAccessibility="no" />
 
     <ToggleButton
         android:id="@+id/toggleButton"
@@ -114,11 +105,14 @@
         android:id="@+id/gespeicherteSpiele"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginEnd="9dp"
+        app:layout_constraintBottom_toTopOf="@+id/avatarImage"
+        app:layout_constraintEnd_toEndOf="@+id/nächsterAvatarL"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/ic_dialog_map" />
+        app:layout_constraintVertical_bias="0.51"
+        app:srcCompat="@android:drawable/ic_dialog_map"
+        android:importantForAccessibility="no" />
 
     <TextView
         android:id="@+id/textView9"
@@ -128,15 +122,6 @@
         app:layout_constraintEnd_toEndOf="@+id/gespeicherteSpiele"
         app:layout_constraintStart_toStartOf="@+id/gespeicherteSpiele"
         app:layout_constraintTop_toBottomOf="@+id/gespeicherteSpiele" />
-
-    <TextView
-        android:id="@+id/textViewEinstellung"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/settings"
-        app:layout_constraintEnd_toEndOf="@+id/SettingsButton"
-        app:layout_constraintStart_toStartOf="@+id/SettingsButton"
-        app:layout_constraintTop_toBottomOf="@+id/SettingsButton" />
 
     <SeekBar
         android:id="@+id/seekBar"
