--- a/app/src/main/res/layout/board.xml
+++ b/app/src/main/res/layout/board.xml
@@ -27,7 +27,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.759"
-        app:srcCompat="@android:drawable/ic_menu_myplaces" />
+        app:srcCompat="@android:drawable/ic_menu_myplaces"
+        android:importantForAccessibility="no" />
 
     <ImageView
         android:id="@+id/imagePlayer2"
@@ -39,7 +40,8 @@
         app:layout_constraintStart_toStartOf="@+id/buttonSpielbrett"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.76"
-        app:srcCompat="@android:drawable/ic_menu_myplaces" />
+        app:srcCompat="@android:drawable/ic_menu_myplaces"
+        android:importantForAccessibility="no" />
 
     <TextView
         android:id="@+id/textViewPlayer1"
