--- a/app/src/main/res/layout/culuture_experinece.xml
+++ b/app/src/main/res/layout/culuture_experinece.xml
@@ -42,7 +42,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView110"
-        app:layout_constraintVertical_bias="0.207" />
+        app:layout_constraintVertical_bias="0.207"
+        android:contentDescription="@string/culture_card" />
 
     <Button
         android:backgroundTint="@color/grey"
