--- a/app/src/main/res/layout/online_connection.xml
+++ b/app/src/main/res/layout/online_connection.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/backgroundGray"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -43,7 +42,8 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView13"
-        app:layout_constraintVertical_bias="0.141" />
+        app:layout_constraintVertical_bias="0.141"
+        android:importantForAutofill="no" />
 
     <ToggleButton
         android:textOff="@string/player_1"
